<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hirumitha.moneymap.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.hirumitha.moneymap.fragments.TransactionFragment"
        android:label="@string/title_add_transaction"
        tools:layout="@layout/fragment_add_transaction" />

    <fragment
        android:id="@+id/navigation_view_summary"
        android:name="com.hirumitha.moneymap.fragments.ViewSummaryFragment"
        android:label="@string/title_view_summary"
        tools:layout="@layout/fragment_view_summary" />

</navigation>