<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light_green"
    tools:context=".activities.SettingsActivity">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/profile_placeholder"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        android:foreground="@drawable/circle_background"
        android:elevation="4dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:background="@color/cream_white">

            <TextView
                android:id="@+id/text_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_your_profile"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:padding="15dp"
                android:layout_marginStart="7dp"
                android:drawablePadding="15dp"
                android:clickable="true"
                android:focusable="true"
                app:drawableLeftCompat="@drawable/ic_edit" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:background="@color/cream_white">

            <TextView
                android:id="@+id/text_app_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:elevation="4dp"
                android:padding="15dp"
                android:text="@string/security"
                android:textSize="17sp"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true"
                app:drawableLeftCompat="@drawable/ic_lock"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:background="@color/cream_white">

            <TextView
                android:id="@+id/text_about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:elevation="4dp"
                android:padding="12dp"
                android:text="@string/about"
                android:textSize="17sp"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true"
                app:drawableLeftCompat="@drawable/ic_info" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:background="@color/cream_white">

            <TextView
                android:id="@+id/text_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:elevation="4dp"
                android:padding="12dp"
                android:text="@string/contact_us"
                android:textSize="17sp"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true"
                app:drawableLeftCompat="@drawable/ic_contact" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0_0"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>